Path refactoring, add matlab scripts

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -39,7 +39,7 @@
     "from parcels import FieldSet\n",
     "from datetime import timedelta, datetime\n",
     "\n",
-    "from utils import create_path"
+    "import utils"
    ]
   },
   {
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dir = create_path(\"current_netcdfs/\" + filename_dict[dataset_url])\n",
+    "save_dir = utils.create_path(utils.CURRENT_NETCDF_DIR / filename_dict[dataset_url])\n",
     "print(save_dir)"
    ]
   },
