--- a/access_thredds_man.ipynb
+++ b/access_thredds_man.ipynb
@@ -31,7 +31,7 @@
     "import numpy as np\n",
     "import xarray as xr\n",
     "\n",
-    "from utils import create_path, expand_coord_rng\n",
+    "import utils\n",
     "from parcels_utils import xr_dataset_to_fieldset"
    ]
   },
@@ -43,17 +43,7 @@
    "source": [
     "dataset_url_6kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/6km/hourly/RTV/HFRADAR_US_West_Coast_6km_Resolution_Hourly_RTV_best.ncd\"\n",
     "dataset_url_2kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/2km/hourly/RTV/HFRADAR_US_West_Coast_2km_Resolution_Hourly_RTV_best.ncd\"\n",
-    "dataset_url_1kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/1km/hourly/RTV/HFRADAR_US_West_Coast_1km_Resolution_Hourly_RTV_best.ncd\"\n",
-    "\n",
-    "DATA_6KM = 6\n",
-    "DATA_2KM = 2\n",
-    "DATA_1KM = 1\n",
-    "\n",
-    "filename_dict = {\n",
-    "    DATA_6KM: \"west_coast_6km_hourly\",\n",
-    "    DATA_2KM: \"west_coast_2km_hourly\",\n",
-    "    DATA_1KM: \"west_coast_1km_hourly\"\n",
-    "}"
+    "dataset_url_1kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/1km/hourly/RTV/HFRADAR_US_West_Coast_1km_Resolution_Hourly_RTV_best.ncd\""
    ]
   },
   {
@@ -65,9 +55,9 @@
     "num_chunks = 50\n",
     "\n",
     "thredds_data = {\n",
-    "    DATA_6KM: xr.open_dataset(dataset_url_6kmhourly, chunks={\"time\": num_chunks}),\n",
-    "    DATA_2KM: xr.open_dataset(dataset_url_2kmhourly, chunks={\"time\": num_chunks}),\n",
-    "    DATA_1KM: xr.open_dataset(dataset_url_1kmhourly, chunks={\"time\": num_chunks})\n",
+    "    utils.DATA_6KM: xr.open_dataset(dataset_url_6kmhourly, chunks={\"time\": num_chunks}),\n",
+    "    utils.DATA_2KM: xr.open_dataset(dataset_url_2kmhourly, chunks={\"time\": num_chunks}),\n",
+    "    utils.DATA_1KM: xr.open_dataset(dataset_url_1kmhourly, chunks={\"time\": num_chunks})\n",
     "}"
    ]
   },
@@ -82,8 +72,8 @@
     "    if isinstance(time_range[0], str):\n",
     "        time_range = (np.datetime64(time_range[0]), np.datetime64(time_range[1]))\n",
     "    if data[5]:\n",
-    "        lat_range = expand_coord_rng(data[3], thredds_data[data[1]][\"lat\"].values)\n",
-    "        lon_range = expand_coord_rng(data[4], thredds_data[data[1]][\"lon\"].values)\n",
+    "        lat_range = utils.expand_coord_rng(data[3], thredds_data[data[1]][\"lat\"].values)\n",
+    "        lon_range = utils.expand_coord_rng(data[4], thredds_data[data[1]][\"lon\"].values)\n",
     "    else:\n",
     "        lat_range = data[3]\n",
     "        lon_range = data[4]\n",
@@ -114,9 +104,9 @@
    "outputs": [],
    "source": [
     "region_data = [\n",
-    "    (\"tj_plume\", DATA_1KM, (\"2020-08-10T00\", \"2020-08-11T00\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
-    "    (\"tj_plume\", DATA_2KM, (\"2020-08-10T00\", \"2020-08-11T00\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
-    "    (\"tj_plume\", DATA_6KM, (\"2020-08-10T00\", \"2020-08-11T00\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
+    "    (\"tj_plume\", utils.DATA_1KM, (\"2020-08-10T00\", \"2020-08-11T00\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
+    "    (\"tj_plume\", utils.DATA_2KM, (\"2020-08-10T00\", \"2020-08-11T00\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
+    "    (\"tj_plume\", utils.DATA_6KM, (\"2020-08-10T00\", \"2020-08-11T00\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
     "#     (\"tijuana_river\", DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11), False),\n",
     "#     (\"tijuana_river\", DATA_2KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.524, 32.75), (-117.32, -117.09), False),\n",
     "#     (\"tijuana_river\", DATA_6KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
@@ -163,14 +153,11 @@
    "outputs": [],
    "source": [
     "for r in regions:\n",
-    "    time_st = time.time()\n",
-    "    save_dir = create_path(\"current_netcdfs/\" + filename_dict[r[\"category\"]])\n",
+    "    save_dir = utils.create_path(utils.CURRENT_NETCDF_DIR / utils.filename_dict[r[\"category\"]])\n",
     "    filename = f\"{r['name']}.nc\"\n",
     "    # save file\n",
     "    r[\"dataset\"].to_netcdf(save_dir / filename)\n",
-    "    time_en = time.time()\n",
     "    print(f\"saved to {save_dir / filename}\")\n",
-    "    print(f\"time elapsed: {time_en - time_st}\")\n",
     "print(\"done\")"
    ]
   }
