--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -35,7 +35,7 @@
     "import matplotlib.pyplot as plt\n",
     "from parcels import FieldSet, ParticleSet, JITParticle, AdvectionRK4, ErrorCode, plotTrajectoriesFile, ParticleFile\n",
     "\n",
-    "from utils import create_path, add_noise, load_pts_mat\n",
+    "import utils\n",
     "from parcels_utils import get_file_info\n",
     "from plot_utils import plot_trajectories"
    ]
@@ -47,8 +47,8 @@
    "outputs": [],
    "source": [
     "files = [\n",
-    "    get_file_info(\"current_netcdfs/Tot_SDLJ_20200810.nc\", 1, name=\"tot_sdlj\"),\n",
-    "    get_file_info(\"current_netcdfs/west_coast_1km_hourly/tj_plume_interped.nc\", 1, name=\"tj_plume\"),\n",
+    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"Tot_SDLJ_20200810.nc\", 1, name=\"tot_sdlj\"),\n",
+    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_1km_hourly/tj_plume_interped.nc\", 1, name=\"tj_plume\"),\n",
     "]"
    ]
   },
@@ -70,13 +70,13 @@
     "#     [32.551707, -117.138],\n",
     "# )\n",
     "\n",
-    "spawn_loc_base = load_pts_mat(\"mat/pts_20200810_0030.mat\", \"yf\", \"xf\").T[1090:1100]\n",
+    "spawn_loc_base = utils.load_pts_mat(utils.MATLAB_DIR / \"pts_20200810_0030.mat\", \"yf\", \"xf\").T[1090:1100]\n",
     "\n",
     "# spawn_locs = add_noise(spawn_loc_base, max_var, repeat=20)\n",
     "spawn_locs = spawn_loc_base\n",
     "simulation_dt = timedelta(minutes=5)\n",
     "out_dt = timedelta(hours=1)\n",
-    "save_dir = create_path(\"particledata/testcompare\")\n",
+    "save_dir = utils.create_path(utils.PARTICLE_NETCDF_DIR / \"testcompare\")\n",
     "\n",
     "def DeleteParticle(particle, fieldset, time):\n",
     "    particle.delete()"
