--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -67,7 +67,7 @@
     "from parcels import FieldSet\n",
     "from datetime import timedelta, datetime\n",
     "\n",
-    "from utils import generate_mask_invalid, generate_mask_none, conv_to_dataarray\n",
+    "import utils\n",
     "from parcels_utils import get_file_info, xr_dataset_to_fieldset"
    ]
   },
@@ -91,11 +91,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = get_file_info(\"current_netcdfs/west_coast_1km_hourly/tijuana_river.nc\", 1, name=\"target\")\n",
+    "target = get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_1km_hourly/tijuana_river.nc\", utils.DATA_1KM, name=\"target\")\n",
     "\n",
     "interp_references = [\n",
-    "    get_file_info(\"current_netcdfs/west_coast_2km_hourly/tijuana_river.nc\", 2, name=\"ref2km\"),\n",
-    "    get_file_info(\"current_netcdfs/west_coast_6km_hourly/tijuana_river.nc\", 6, name=\"ref6km\")\n",
+    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_2km_hourly/tijuana_river.nc\", utils.DATA_2KM, name=\"ref2km\"),\n",
+    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_6km_hourly/tijuana_river.nc\", utils.DATA_6KM, name=\"ref6km\")\n",
     "]"
    ]
   },
@@ -165,8 +165,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "no_data = generate_mask_none(target[\"xrds\"][\"u\"].values)\n",
-    "invalid = generate_mask_invalid(target[\"xrds\"][\"u\"].values)\n",
+    "no_data = utils.generate_mask_none(target[\"xrds\"][\"u\"].values)\n",
+    "invalid = utils.generate_mask_invalid(target[\"xrds\"][\"u\"].values)\n",
     "invalid_pos = np.where(invalid)\n",
     "num_invalid = invalid.sum()\n",
     "print(f\"total invalid values on target data: {num_invalid}\")"
@@ -278,7 +278,7 @@
     "        arr_v[i] = c_v\n",
     "    target_interped_u[invalid_pos_new] = arr_u\n",
     "    target_interped_v[invalid_pos_new] = arr_v\n",
-    "    invalid_interped = generate_mask_invalid(target_interped_u)\n",
+    "    invalid_interped = utils.generate_mask_invalid(target_interped_u)\n",
     "    print(f\"total invalid values after interpolation with {f['name']}: {invalid_interped.sum()}\")\n",
     "    print(f\"    values filled: {num_invalid_new - invalid_interped.sum()}\")"
    ]
@@ -405,8 +405,8 @@
    "outputs": [],
    "source": [
     "# re-add coordinates, dimensions, and metadata to interpolated data\n",
-    "darr_u = conv_to_dataarray(filled_u, target[\"xrds\"][\"u\"])\n",
-    "darr_v = conv_to_dataarray(filled_v, target[\"xrds\"][\"v\"])\n",
+    "darr_u = utils.conv_to_dataarray(filled_u, target[\"xrds\"][\"u\"])\n",
+    "darr_v = utils.conv_to_dataarray(filled_v, target[\"xrds\"][\"v\"])\n",
     "target_interped_xrds = target[\"xrds\"].drop_vars([\"u\", \"v\"]).assign(u=darr_u, v=darr_v)"
    ]
   },
@@ -417,8 +417,8 @@
    "outputs": [],
    "source": [
     "# re-add coordinates, dimensions, and metadata to smoothed data\n",
-    "darr_u_smooth = conv_to_dataarray(smoothed_u, target[\"xrds\"][\"u\"])\n",
-    "darr_v_smooth = conv_to_dataarray(smoothed_v, target[\"xrds\"][\"v\"])\n",
+    "darr_u_smooth = utils.conv_to_dataarray(smoothed_u, target[\"xrds\"][\"u\"])\n",
+    "darr_v_smooth = utils.conv_to_dataarray(smoothed_v, target[\"xrds\"][\"v\"])\n",
     "target_interped_xrds_smooth = target[\"xrds\"].drop_vars([\"u\", \"v\"]).assign(u=darr_u_smooth, v=darr_v_smooth)"
    ]
   },
@@ -428,7 +428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path = target[\"path\"].split(\".nc\")[0] + \"_interped.nc\"\n",
+    "save_path = str(target[\"path\"]).split(\".nc\")[0] + \"_interped.nc\"\n",
     "target_interped_xrds.to_netcdf(save_path)\n",
     "print(f\"saved to {save_path}\")"
    ]
