--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -38,7 +38,6 @@
     "import xarray as xr\n",
     "\n",
     "import utils\n",
-    "from utils import load_config, create_path, add_noise, load_pts_mat\n",
     "from parcels_utils import get_file_info\n",
     "from plot_utils import plot_particles_age\n",
     "\n",
@@ -66,8 +65,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "configs_path = \"parcels_configs/\"\n",
-    "\n",
     "configs = [\n",
     "    \"plume_track.json\",\n",
     "    \"plume_track_totsdlj.json\"\n",
@@ -80,7 +77,7 @@
     "#     \"tijuana_range.json\",\n",
     "]\n",
     "\n",
-    "loaded_configs = [load_config(configs_path + path) for path in configs]\n",
+    "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
     "files = [get_file_info(cfg[\"netcdf_path\"], cfg[\"resolution\"], name=cfg[\"name\"], parcels_cfg=cfg[\"parcels_config\"]) for cfg in loaded_configs]"
    ]
   },
@@ -205,13 +202,13 @@
    },
    "outputs": [],
    "source": [
-    "part_path = create_path(\"particledata\")\n",
+    "part_path = utils.create_path(utils.PARTICLE_NETCDF_DIR)\n",
     "\n",
     "for f in files:\n",
     "    cfg = f[\"cfg\"]\n",
     "    # data is from .mat file\n",
     "    if isinstance(cfg[\"spawn_points\"], str):\n",
-    "        spawns = load_pts_mat(cfg[\"spawn_points\"], \"yf\", \"xf\")\n",
+    "        spawns = utils.load_pts_mat(cfg[\"spawn_points\"], \"yf\", \"xf\")\n",
     "        cfg[\"spawn_points\"] = spawns.T\n",
     "    else:\n",
     "        cfg[\"spawn_points\"] = np.array(cfg[\"spawn_points\"])\n",
@@ -263,7 +260,7 @@
     "\n",
     "    # set up ParticleSet and ParticleFile\n",
     "    f[\"pset\"] = ParticleSet(fieldset=f[\"fs\"], pclass=TimedParticle, lon=p_lons, lat=p_lats, time=time_arr)\n",
-    "    save_path = f\"{part_path}/particle_{f['name']}.nc\"\n",
+    "    save_path = part_path / f\"particle_{f['name']}.nc\"\n",
     "    f[\"pfile\"] = f[\"pset\"].ParticleFile(save_path)\n",
     "    print(f\"Particle trajectories for {f['name']} will be saved to {save_path}\")\n",
     "    print(f\"    total particles in simulation: {total}\")"
@@ -307,7 +304,7 @@
     "        print(f\"Num snapshots to save for {f['path']}: {cfg['snap_num'] + 2}\")\n",
     "    if cfg[\"snap_num\"] >= 200:\n",
     "        raise Exception(f\"Too many snapshots ({cfg['snap_num']}).\")\n",
-    "    f[\"snap_path\"] = create_path(f\"snapshots/{utils.filename_dict[f['res']]}/{f['name']}\")\n",
+    "    f[\"snap_path\"] = utils.create_path(utils.PICUTRE_DIR / f\"{utils.filename_dict[f['res']]}/{f['name']}\")\n",
     "    print(f\"Path to save snapshots to: {f['snap_path']}\")\n",
     "    # only clear directory if desired or actually saving images\n",
     "    if cfg[\"save_snapshots\"]:\n",
@@ -384,7 +381,7 @@
     "            [\n",
     "                \"magick\", \"-delay\", str(gif_delay),\n",
     "                str(f[\"snap_path\"]) + \"/*.png\", # path to the snapshots to stitch\n",
-    "                f\"snapshots/{utils.filename_dict[f['res']]}/partsim_{f['name']}.gif\" # path to save gif to\n",
+    "                utils.PICUTRE_DIR / f\"{utils.filename_dict[f['res']]}/partsim_{f['name']}.gif\" # path to save gif to\n",
     "            ],\n",
     "            stdout=subprocess.PIPE,\n",
     "            stderr=subprocess.PIPE,\n",
