--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -29,7 +29,7 @@
     "import scipy.io\n",
     "import xarray as xr\n",
     "\n",
-    "from utils import create_gif, load_pts_mat\n",
+    "import utils\n",
     "from parcels_utils import xr_dataset_to_fieldset\n",
     "from plot_utils import get_carree_axis, plot_particles"
    ]
@@ -59,7 +59,7 @@
     "    \"E\": -117\n",
     "}\n",
     "\n",
-    "coastline = load_pts_mat(\"mat/coastline.mat\", \"latz0\", \"lonz0\")\n",
+    "coastline = utils.load_pts_mat(utils.MATLAB_DIR / \"coastline.mat\", \"latz0\", \"lonz0\")\n",
     "# just filter out the problematic upper coastline where it goes up and down\n",
     "coastline = coastline[:, :288]"
    ]
@@ -156,15 +156,15 @@
    "source": [
     "ds_total = None\n",
     "for i in range(start, 2400, incr):\n",
-    "    name = f\"mat/{file_prefix}_{str(i).zfill(4)}.mat\"\n",
-    "    try:\n",
-    "        ds = dataset_from_mat(\"mat/codartotalGrid.mat\", name, True)\n",
+    "    name = utils.MATLAB_DIR / f\"{file_prefix}_{str(i).zfill(4)}.mat\"\n",
+    "    if name.is_file():\n",
+    "        ds = dataset_from_mat(utils.MATLAB_DIR / \"codartotalGrid.mat\", name, True)\n",
     "        if ds_total is None:\n",
     "            ds_total = ds\n",
     "        else:\n",
     "            ds_total = xr.concat([ds_total, ds], dim=\"time\")\n",
     "        data = scipy.io.loadmat(name)\n",
-    "    except FileNotFoundError:\n",
+    "    else:\n",
     "        print(f\"file {name} not found\")"
    ]
   },
