--- a/plume_mat_particle_loader.ipynb
+++ b/plume_mat_particle_loader.ipynb
@@ -32,6 +32,7 @@
     "import scipy.io\n",
     "import xarray as xr\n",
     "\n",
+    "import utils\n",
     "from parcels_utils import arrays_to_particlefilenc"
    ]
   },
@@ -55,8 +56,7 @@
    "source": [
     "start_time = np.datetime64(\"2020-08-10T00:30\")\n",
     "end_time = np.datetime64(\"2020-08-10T23:30\")\n",
-    "incr = np.timedelta64(1, \"h\")\n",
-    "pts_dir = \"mat/\""
+    "incr = np.timedelta64(1, \"h\")"
    ]
   },
   {
@@ -71,10 +71,10 @@
     "while current_time <= end_time:\n",
     "    date_parsed, time_parsed = parse_time(current_time)\n",
     "    filename = f\"pts_{date_parsed}_{time_parsed}.mat\"\n",
-    "    try:\n",
-    "        pts_mat = scipy.io.loadmat(pts_dir + filename)\n",
-    "    except FileNotFoundError:\n",
-    "        print(f\"{pts_dir + filename} not found\")\n",
+    "    if (utils.MATLAB_DIR / filename).is_file():\n",
+    "        pts_mat = scipy.io.loadmat(utils.MATLAB_DIR / filename)\n",
+    "    else:\n",
+    "        print(f\"{utils.MATLAB_DIR / filename} not found\")\n",
     "        current_time += incr\n",
     "        continue\n",
     "    lon = np.array(pts_mat[\"xf\"], dtype=np.float32)\n",
@@ -121,7 +121,7 @@
    "outputs": [],
    "source": [
     "date, time = parse_time(start_time)\n",
-    "dataset.to_netcdf(f\"particledata/plume_pts_{date}_{time}.nc\")"
+    "dataset.to_netcdf(utils.PARTICLE_NETCDF_DIR / f\"plume_pts_{date}_{time}.nc\")"
    ]
   }
  ],
