Integrate matlab smoothn function into python, improve masking

--- a/access_thredds_man.ipynb
+++ b/access_thredds_man.ipynb
@@ -41,6 +41,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "a = slice(np.datetime64(\"2020-08-10T00\"), np.datetime64(\"2020-08-11T00\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dataset_url_6kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/6km/hourly/RTV/HFRADAR_US_West_Coast_6km_Resolution_Hourly_RTV_best.ncd\"\n",
     "dataset_url_2kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/2km/hourly/RTV/HFRADAR_US_West_Coast_2km_Resolution_Hourly_RTV_best.ncd\"\n",
     "dataset_url_1kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/1km/hourly/RTV/HFRADAR_US_West_Coast_1km_Resolution_Hourly_RTV_best.ncd\""
@@ -68,9 +95,7 @@
    "outputs": [],
    "source": [
     "def get_region(data):\n",
-    "    time_range = data[2]\n",
-    "    if isinstance(time_range[0], str):\n",
-    "        time_range = (np.datetime64(time_range[0]), np.datetime64(time_range[1]))\n",
+    "    time_range = get_time_slice(data[2])\n",
     "    if data[5]:\n",
     "        lat_range = utils.expand_coord_rng(data[3], thredds_data[data[1]][\"lat\"].values)\n",
     "        lon_range = utils.expand_coord_rng(data[4], thredds_data[data[1]][\"lon\"].values)\n",
@@ -94,7 +119,25 @@
     "def get_latest_span(delta):\n",
     "    # GMT, data recorded hourly\n",
     "    time_now = np.datetime64(\"now\", \"h\")\n",
-    "    return (time_now - delta, time_now)"
+    "    return (time_now - delta, time_now)\n",
+    "\n",
+    "\n",
+    "def get_time_slice(time_range):\n",
+    "    if len(time_range) == 2:\n",
+    "        return slice(np.datetime64(time_range[0]), np.datetime64(time_range[1]))\n",
+    "    if len(time_range) == 3:\n",
+    "        return slice(np.datetime64(time_range[0]), np.datetime64(time_range[1]), time_range[2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### about tj_sample\n",
+    "\n",
+    "the purpose of tj_sample is a quick and dirty way to sample the thredds data from a bunch of different times to find out the positions of where data exists. data in close time ranges could all have the same holes in data, and we would never know if data was supposed to be there in the first place.\n",
+    "\n",
+    "so tj_sample is generated for the sole purpose of creating a mask showing where data shouldn't exist."
    ]
   },
   {
@@ -104,6 +147,7 @@
    "outputs": [],
    "source": [
     "region_data = [\n",
+    "    (\"tj_sample\", utils.DATA_1KM, (\"2020-01-10T00\", \"2020-08-11T00\", 200), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
     "    (\"tj_plume\", utils.DATA_1KM, (\"2020-08-10T00\", \"2020-08-11T00\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
     "    (\"tj_plume\", utils.DATA_2KM, (\"2020-08-10T00\", \"2020-08-11T00\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
     "    (\"tj_plume\", utils.DATA_6KM, (\"2020-08-10T00\", \"2020-08-11T00\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
@@ -118,17 +162,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "lol 500 days is only like 100 megabytes, took me a good 20 minutes to download\n",
-    "\n",
-    "oh my god its even slower now what the fuck\n",
-    "\n",
-    "10 minutes for a 12 megabyte download are you serious"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -138,7 +171,7 @@
     "for rd in region_data:\n",
     "    new_reg = get_region(rd)\n",
     "    new_reg[\"dataset\"] = thredds_data[new_reg[\"category\"]].sel(\n",
-    "        time=slice(new_reg[\"time\"][0], new_reg[\"time\"][1]),\n",
+    "        time=new_reg[\"time\"],\n",
     "        lat=slice(new_reg[\"lat\"][0], new_reg[\"lat\"][1]),\n",
     "        lon=slice(new_reg[\"lon\"][0], new_reg[\"lon\"][1]),\n",
     "    )\n",
