Integrate smoothn.m into gapfilling notebook

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -82,7 +82,9 @@
     "`interp_references` is a list of reference data to interpolate from. A few specifications:\n",
     "- should be ordered from most accurate data to least accurate (highest to lowest resolution)\n",
     "- time domain should be identical or bigger than the one of the target\n",
-    "- lat and lon domain should be bigger than the target's to prevent any out-of-bounds complications"
+    "- lat and lon domain should be bigger than the target's to prevent any out-of-bounds complications\n",
+    "\n",
+    "`mask_nc` must have the exact same lat and lon dimensions of the target"
    ]
   },
   {
@@ -91,12 +93,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_1km_hourly/tijuana_river.nc\", utils.DATA_1KM, name=\"target\")\n",
+    "target = get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_1km_hourly/tj_plume.nc\", utils.DATA_1KM, name=\"target\")\n",
     "\n",
     "interp_references = [\n",
-    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_2km_hourly/tijuana_river.nc\", utils.DATA_2KM, name=\"ref2km\"),\n",
-    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_6km_hourly/tijuana_river.nc\", utils.DATA_6KM, name=\"ref6km\")\n",
-    "]"
+    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_2km_hourly/tj_plume.nc\", utils.DATA_2KM, name=\"ref2km\"),\n",
+    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_6km_hourly/tj_plume.nc\", utils.DATA_6KM, name=\"ref6km\")\n",
+    "]\n",
+    "\n",
+    "mask_nc = get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_1km_hourly/tj_sample.nc\", utils.DATA_1KM, name=\"sample\")"
    ]
   },
   {
@@ -121,7 +125,12 @@
     "    assert ir[\"lat\"][-1] >= targ_max[0]\n",
     "    assert ir[\"lon\"][-1] >= targ_max[1]\n",
     "    assert ir[\"timerng\"][0] <= target[\"timerng\"][0]\n",
-    "    assert ir[\"timerng\"][1] >= target[\"timerng\"][1]"
+    "    assert ir[\"timerng\"][1] >= target[\"timerng\"][1]\n",
+    "assert target[\"res\"] == mask_nc[\"res\"]\n",
+    "assert mask_nc[\"lat\"][0] == targ_min[0]\n",
+    "assert mask_nc[\"lon\"][0] == targ_min[1]\n",
+    "assert mask_nc[\"lat\"][-1] == targ_max[0]\n",
+    "assert mask_nc[\"lon\"][-1] == targ_max[1]"
    ]
   },
   {
@@ -165,7 +174,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "no_data = utils.generate_mask_none(target[\"xrds\"][\"u\"].values)\n",
+    "no_data = utils.generate_mask_none(mask_nc[\"xrds\"][\"u\"].values)[0]\n",
+    "no_data = np.tile(no_data, (target[\"xrds\"][\"time\"].size, 1, 1))\n",
     "invalid = utils.generate_mask_invalid(target[\"xrds\"][\"u\"].values)\n",
     "invalid_pos = np.where(invalid)\n",
     "num_invalid = invalid.sum()\n",
@@ -296,11 +306,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TODO: even more filling with PLS and smoothing with DCT shenanigans\n",
+    "## even more filling with PLS and smoothing with DCT shenanigans\n",
     "\n",
-    "this is just one option, but hey\n",
+    "uses the matlab engine and smoothn.m\n",
     "\n",
-    "ps ignore this code i have no idea what i was doing"
+    "https://www.mathworks.com/help/matlab/matlab-engine-for-python.html\n",
+    "\n",
+    "https://www.mathworks.com/matlabcentral/fileexchange/25634-smoothn"
    ]
   },
   {
@@ -309,86 +321,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy.fftpack\n",
+    "import matlab.engine\n",
     "\n",
-    "# temporary testing with smoothing\n",
-    "# i just brainlessly stuck the equations in here\n",
-    "field_shape = target_interped_u.shape\n",
-    "k, l = np.meshgrid(np.arange(field_shape[1]), np.arange(field_shape[2]), indexing='ij')\n",
-    "s = 0.1\n",
+    "eng = matlab.engine.start_matlab()\n",
     "\n",
-    "lam = 4 - 2 * np.cos((k - 1) * math.pi / field_shape[1]) - 2 * np.cos((l - 1) * math.pi / field_shape[2])\n",
-    "gam = 1 / (1 + s * lam ** 2)\n",
+    "u_list = target_interped_u.tolist()\n",
+    "v_list = target_interped_v.tolist()\n",
     "\n",
-    "# dct freaks out when there's nans, have to replace them with 0\n",
-    "smoothed_u = np.nan_to_num(target_interped_u)\n",
-    "smoothed_v = np.nan_to_num(target_interped_v)\n",
-    "for i in range(smoothed_u.shape[0]):\n",
-    "    smoothed_u[i] = scipy.fftpack.idct(gam * scipy.fftpack.dct(smoothed_u[i], norm=\"ortho\"), norm=\"ortho\")\n",
-    "    smoothed_v[i] = scipy.fftpack.idct(gam * scipy.fftpack.dct(smoothed_v[i], norm=\"ortho\"), norm=\"ortho\")\n",
-    "smoothed_u[np.where(no_data)] = np.nan\n",
-    "smoothed_v[np.where(no_data)] = np.nan"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### gridfill invalid values after linear interpolation\n",
-    "\n",
-    "in theory there should still be invalid spaces left over because the 6 km data will sometimes have gaps\n",
-    "\n",
-    "hopefully after this interpolation, the gaps of invalid data are small enough to let gridfilling finish the job"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import numpy.ma as ma\n",
-    "# from gridfill import fill\n",
-    "\n",
-    "# masked_u = ma.masked_array(target_interped_u, invalid_interped)\n",
-    "# masked_v = ma.masked_array(target_interped_v, invalid_interped)\n",
-    "\n",
-    "# kw = dict(eps=1e-4, relax=0.6, itermax=1e4, initzonal=False,\n",
-    "#           cyclic=False, verbose=False)\n",
-    "\n",
-    "# # since data is 3d, use axes 2 and 1 since axis 0 is time\n",
-    "# filled_u, converged_u = fill(masked_u, 2, 1, **kw)\n",
-    "# filled_v, converged_v = fill(masked_v, 2, 1, **kw)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# invalid_filled = generate_mask_invalid(filled_u)\n",
-    "# print(f\"total invalid values on filled: {invalid_filled.sum()}\")\n",
-    "# print(f\"percent invalid filled: {(invalid_interped.sum() - invalid_filled.sum()) / invalid_interped.sum()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filled_u = target_interped_u\n",
-    "filled_v = target_interped_v"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### wow\n",
-    "\n",
-    "unsurprisingly gridfill did jack shit"
+    "for i in range(len(u_list)):\n",
+    "    uv_mat = matlab.double([u_list[i], v_list[i]])\n",
+    "    uv_smooth = eng.smoothn(uv_mat, \"robust\")\n",
+    "    uv_array = np.empty(uv_smooth.size)\n",
+    "    uv_array[:] = uv_smooth\n",
+    "    target_interped_u[i] = uv_array[0]\n",
+    "    target_interped_v[i] = uv_array[1]\n",
+    "    \n",
+    "target_interped_u[np.where(no_data)] = np.nan\n",
+    "target_interped_v[np.where(no_data)] = np.nan"
    ]
   },
   {
@@ -405,21 +354,9 @@
    "outputs": [],
    "source": [
     "# re-add coordinates, dimensions, and metadata to interpolated data\n",
-    "darr_u = utils.conv_to_dataarray(filled_u, target[\"xrds\"][\"u\"])\n",
-    "darr_v = utils.conv_to_dataarray(filled_v, target[\"xrds\"][\"v\"])\n",
+    "darr_u = utils.conv_to_dataarray(target_interped_u, target[\"xrds\"][\"u\"])\n",
+    "darr_v = utils.conv_to_dataarray(target_interped_v, target[\"xrds\"][\"v\"])\n",
     "target_interped_xrds = target[\"xrds\"].drop_vars([\"u\", \"v\"]).assign(u=darr_u, v=darr_v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# re-add coordinates, dimensions, and metadata to smoothed data\n",
-    "darr_u_smooth = utils.conv_to_dataarray(smoothed_u, target[\"xrds\"][\"u\"])\n",
-    "darr_v_smooth = utils.conv_to_dataarray(smoothed_v, target[\"xrds\"][\"v\"])\n",
-    "target_interped_xrds_smooth = target[\"xrds\"].drop_vars([\"u\", \"v\"]).assign(u=darr_u_smooth, v=darr_v_smooth)"
    ]
   },
   {
@@ -447,10 +384,8 @@
    "outputs": [],
    "source": [
     "fs_interp = xr_dataset_to_fieldset(target_interped_xrds)\n",
-    "fs_smooth = xr_dataset_to_fieldset(target_interped_xrds_smooth)\n",
     "target[\"fs\"].U.show()  # uninterpolated\n",
-    "fs_interp.U.show()  # interpolated\n",
-    "fs_smooth.U.show()  # interpolated + smooth"
+    "fs_interp.U.show()  # interpolated, gapfilled, smoothed"
    ]
   }
  ],
